--- a/Inheritance/Inheritance/Inheritance.vcxproj.filters
+++ b/Inheritance/Inheritance/Inheritance.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="BaseAccount.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="CheckingAccount.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BaseAccount.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CheckingAccount.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
