--- a/Inheritance/Inheritance/Inheritance.vcxproj.filters
+++ b/Inheritance/Inheritance/Inheritance.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="SavingsAccount.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="CreditAccount.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BaseAccount.h">
@@ -39,6 +42,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Helper.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CreditAccount.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
