Created the Employees Class. Which is publicly derived from Base Class.

--- a/Rule_Of_3/Rule_Of_3/Rule_Of_3.vcxproj
+++ b/Rule_Of_3/Rule_Of_3/Rule_Of_3.vcxproj
@@ -128,10 +128,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Base.cpp" />
+    <ClCompile Include="Employee.cpp" />
     <ClCompile Include="Rule_Of_3.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Base.h" />
+    <ClInclude Include="Employee.h" />
     <ClInclude Include="Helper.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
